# rss_crawlers

./: .gitignore  config.py  pyproject.toml  scrapy.cfg  settings.yaml
apps/: app.py  lifespan.py  root_router.py
biz/: images.py  rss_news_crawler.py
docker/dockerfiles/: api.dockerfile
services/scylladb/: mm_scylla_db.py
web_crawlers/: items.py  middlewares.py  pipelines.py  settings.py
web_crawlers/spiders/: bbc_news.py  yahoo_news.py
